vue项目第二天

--- a/.babelrc
+++ b/.babelrc
@@ -3,12 +3,12 @@
       "env","stage-0"
     ],
     "plugins": [
-        "transform-runtime",
-        ["component", 
+        "transform-runtime",["transform-remove-strict-mode"],
+        ["component",[
             {
                 "libraryName": "mint-ui",
                 "style": true
-            }
+            }]
         ]
     ]
   }
