--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.2.0",
+    "fibers": "^4.0.1",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
+    "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
@@ -37,6 +40,7 @@
   "dependencies": {
     "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-source": "^1.1.1"
   }
 }
