--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
+    "vue-preview": "^1.1.3",
     "vue-router": "^3.1.3",
     "vue-source": "^1.1.1"
   }
