--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue": "^2.6.10",
     "vue-preview": "^1.1.3",
     "vue-router": "^3.1.3",
-    "vue-source": "^1.1.1"
+    "vue-source": "^1.1.1",
+    "vuex": "^3.1.1"
   }
 }
